# resonance

./: .editorconfig  .eslintrc.json  .gitignore  .gitmodules  .lintstagedrc.json  AGENT-QUICKSTART.md  BUILD-OPTIMIZATION-OPPORTUNITIES.md  CLAUDE.md  DEVELOPMENT-PLAN.md  GITHUB-SETUP.md  README.md  RYZENADJ_TAURI_PROJECT_PLAN.md  TASK-003-IMPLEMENTATION-SUMMARY.md  TASK-003-TEST-RESULTS.md  TASK-004-IMPLEMENTATION-SUMMARY.md  TASK_DEPENDENCY_VERIFICATION.md  TASK_SUMMARY.md  dev-start.sh  dprint.json  issue-mapping.txt  package-lock.json  package.json  rustfmt.toml  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  pr.yml  release.yml
.husky/: commit-msg  pre-commit
docs/: PRE-COMMIT-SETUP.md
scripts/: check-rust-tools.js  check-rust-tools.ps1  check-rust-tools.sh  create-github-issues.py
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  RYZENADJ_INTEGRATION.md  build.rs  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/ryzenadj/: mod.rs
src/__tests__/: build-config.test.ts
src/components/: ResponsiveTest.tsx  TailwindTestResults.tsx  ThemeToggle.tsx  UIComponentsTest.tsx
src/components/__tests__/: TailwindTest.test.tsx
src/components/ui/: button-variants.ts  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  switch.tsx  tabs.tsx  toast.tsx  tooltip.tsx
src/lib/: utils.ts
src/scripts/: test-theme.js
src/test/: App.test.tsx  setup.ts
src/utils/: test-css-variables.ts
