[package]
name = "resonance"
version = "0.1.0"
authors = ["Resonance Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/dwalleck/resonance"
rust-version = "1.77.2"
description = "A modern GUI for RyzenAdj"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"

[profile.dev]
incremental = true

[profile.release]
incremental = true
codegen-units = 16 # Balanced parallelism without excessive overhead
